Prevent listing chooser tabs from line wrapping on hover.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7046,7 +7046,6 @@ body.with-listing-chooser {
 
             &:hover {
                 margin-left: 9px;
-                padding-right: 10px;
             }
 
             a {
@@ -7132,6 +7131,7 @@ body.with-listing-chooser {
 
         .error {
             margin: 4px 0;
+            width: 100px;
         }
 
         button {
